--- a/Trunk.toml
+++ b/Trunk.toml
@@ -2,9 +2,9 @@
 target = "index.html"
 dist = "dist"
 release = false
-public_url = "/yew-template-for-github-io/"
+# public_url = "/yew-template-for-github-io/"
 # public_url = "/{project_name}/"            # for {username}.github.io/{project_name}
-# public_url = "/"                           # for {username}.github.io
+public_url = "/"                           # for {username}.github.io
 
 [watch]
 watch = [
